--- a/index.html
+++ b/index.html
@@ -8,65 +8,65 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
   <body>
-  <div class="wrapper">
-    <header class="main-header">
-      <div class="container">
-        <nav class="main-navigation">
-          <ul class="clearfix">
-            <li class="navigation-element left-navigation">
-              <a href="#">Информация</a>
-            </li>
-            <li class="navigation-element left-navigation">
-              <a href="#">Фото и видео</a>
-            </li>
-            <li class="navigation-element right-navigation">
-              <a href="catalog.html">Гостиницы</a>
-            </li>
-            <li class="navigation-element right-navigation">
-              <a href="#">Карта штата</a>
-          </ul>
-        </nav>
-        <a class="index-logo" href="#">
-          <img src="img/logo.png" alt="Седона">
-        </a>
-      </div>
-    </header>
-    <main class="container">
-      <div class="promo-picture">
-      </div>
-      <div class="promo-block">
-          <h1>Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
-          <span class="promo-speech"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</span>
-      </div>
-      <div class="picture-reason">
-        <div class="picture-description">
-          <h2 class="picture-header">Настоящий городок</h2>
-          <div class="picture-number">&mdash;№1&mdash;</div>
-          <p class="picture-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+    <div class="wrapper">
+      <header class="main-header">
+        <div class="container">
+          <nav class="main-navigation">
+            <ul class="clearfix">
+              <li class="navigation-element left-navigation">
+                <a href="#">Информация</a>
+              </li>
+              <li class="navigation-element left-navigation">
+                <a href="#">Фото и видео</a>
+              </li>
+              <li class="navigation-element right-navigation">
+                <a href="catalog.html">Гостиницы</a>
+              </li>
+              <li class="navigation-element right-navigation">
+                <a href="#">Карта штата</a>
+            </ul>
+          </nav>
+          <a class="index-logo" href="#">
+            <img src="img/logo.png" alt="Седона">
+          </a>
         </div>
+      </header>
+      <main class="container">
+        <div class="promo-picture">
+        </div>
+        <div class="promo-block">
+          <h1>Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</h1>
+          <span class="promo-speech"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</span>
+        </div>
+        <div class="picture-reason">
+          <div class="picture-description">
+            <h2 class="picture-header">Настоящий городок</h2>
+            <div class="picture-number">&mdash;№1&mdash;</div>
+            <p class="picture-text">Седона &mdash; не аттракцион для туристов, там течет своя жизнь</p>
+          </div>
           <div class="picture">
             <img src ="img/usaflag.jpg" alt="Город">
           </div>
-      </div>
-      <section class="reason-list">
-        <div class="reason-point">
-          <img src ="img/house.png" alt="Жилье">
-          <h2 class="reason-header">Жилье</h2>
-          <span>Рекомендуем пожить в настоящем мотеле, все как в кино!</span>
         </div>
-        <div class="reason-point">
-          <img src ="img/food.png" alt="Еда">
-          <h2 class="reason-header">Еда</h2>
-          <span>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</span>
-        </div>
-        <div class="reason-point">
-          <img src ="img/present.png" alt="Сувениры">
-          <h2 class="reason-header">Сувениры</h2>
-          <span>Не только китайского, но и местного производства!</span>
-        </div>
-      </section>
-      <div class="picture-reason-reverse">
-         <div class="picture-description-reverse">
+        <section class="reason-list">
+          <div class="reason-point">
+            <img src ="img/house.png" alt="Жилье">
+            <h2 class="reason-header">Жилье</h2>
+            <span>Рекомендуем пожить в настоящем мотеле, все как в кино!</span>
+          </div>
+          <div class="reason-point">
+            <img src ="img/food.png" alt="Еда">
+            <h2 class="reason-header">Еда</h2>
+            <span>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</span>
+          </div>
+          <div class="reason-point">
+            <img src ="img/present.png" alt="Сувениры">
+            <h2 class="reason-header">Сувениры</h2>
+            <span>Не только китайского, но и местного производства!</span>
+          </div>
+        </section>
+        <div class="picture-reason-reverse">
+          <div class="picture-description-reverse">
            <h2 class="picture-header-reverse">Там есть мост дьявола</h2>
            <div class="picture-number-reverse">&mdash;№2&mdash;</div>
            <p class="picture-text-reverse">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
@@ -74,82 +74,82 @@
           <div class="picture">
             <img src ="img/mountains.jpg" alt="Горы">
           </div>
-      </div>
-      <section class="reason-list-nopicture">
-        <div class="reason-point-nopicture">
-          <h2 class="reason-header-nopicture">Небольшая площадь</h2>
-          <div>&mdash;№3&mdash;</div>
-          <p>Все достопримечательности находятся очень близко</p>
         </div>
-        <div class="reason-point-nopicture">
-          <h2 class="reason-header-nopicture">Красивая дорога</h2>
-          <div>&mdash;№4&mdash;</div>
-          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        </div>
-        <div class="reason-point-nopicture">
-          <h2 class="reason-header-nopicture">Мало туристов</h2>
-          <div>&mdash;№5&mdash;</div>
-          <p>Большинство едет в Гранд Каньон и толпится там</p>
-        </div>
-      </section>
-      <section class="if-interest-block">
-        <div class="if-interest-content">
-          <span class="main-question">Заинтересовались?</span>
-          <p class="main-answer">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        </div>
-        <div class="search-open">
-          <h3 class="search-name">Поиск гостиницы в Седоне</h3>
-        </div>
-      </section>
-      <div class="search-block map">
-        <div class="search-basis">
-          <form class="search-form" action="#" method="post">
-            <div class="search-row search-first-row">
-              <label for="date-in">Дата заезда:</label>
-              <input class="date-in"type="text" id="date-in" name="date-in" placeholder="24 апреля 2017">
-              <button class="calendar calendar-first" type="button" title="Календарь">Календарь</button>
-            </div>
-            <div class="search-row search-second-row">
-              <label for="date-out">Дата выезда:</label>
-              <input class="date-out" type="text" id="date-out" name="date-out" placeholder="4 июля 2017">
-              <button class="calendar calendar-second" type="button" title="Календарь">Календарь</button>
-            </div>
-            <div class="search-row search-third-row">
-              <label for="adults">Взрослые:</label>
-              <button class="minus-button" type="button" title="Минус">-</button>
-              <input class="adults" type="text" id="adults" name="adults" placeholder="2">
-              <button class="plus-button" type="button" title="Плюс">+</button>
-            </div>
-            <div class="search-row search-fourth-row">
-              <label for="children">Дети:</label>
-              <button class="minus-button" type="button" title="Минус">-</button>
-              <input class="children" type="text" id="children" name="children" placeholder="0">
-              <button class="plus-button" type="button" title="Плюс">+</button>
-            </div>
-            <div class="search-form-button">
-              <input type="submit" value="Найти">
-            </div>
-        </div>
-        </form>
-      </div>
-    </main>
-    <footer class="container">
-      <div class="footer-main footer-opacity clearfix">
-        <section class="hashtag">
-          <span>#Visitsedona</span>
+        <section class="reason-list-nopicture">
+          <div class="reason-point-nopicture">
+            <h2 class="reason-header-nopicture">Небольшая площадь</h2>
+            <div>&mdash;№3&mdash;</div>
+            <p>Все достопримечательности находятся очень близко</p>
+          </div>
+          <div class="reason-point-nopicture">
+            <h2 class="reason-header-nopicture">Красивая дорога</h2>
+            <div>&mdash;№4&mdash;</div>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </div>
+            <div class="reason-point-nopicture">
+            <h2 class="reason-header-nopicture">Мало туристов</h2>
+            <div>&mdash;№5&mdash;</div>
+            <p>Большинство едет в Гранд Каньон и толпится там</p>
+          </div>
         </section>
-        <section class="footer-social">
-          <a class="social-btn social-btn-twitter" href="#">Twitter</a>
-          <a class="social-btn social-btn-facebook" href="#">Facebook</a>
-          <a class="social-btn social-btn-youtube" href="#">Youtube</a>
+        <section class="if-interest-block">
+          <div class="if-interest-content">
+            <span class="main-question">Заинтересовались?</span>
+            <p class="main-answer">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          </div>
+          <div class="search-open">
+            <h3 class="search-name">Поиск гостиницы в Седоне</h3>
+          </div>
         </section>
-        <section class="footer-copyright">
-          <span class="html-academy">Website by</span>
-          <a class="copyright-img link-img" href="https://htmlacademy.ru/intensive/htmlcss">
-          </a>
-        </section>
-      </div>
-    </footer>
-  </div>
+        <div class="search-block map">
+          <div class="search-basis">
+            <form class="search-form" action="#" method="post">
+              <div class="search-row search-first-row">
+                <label for="date-in">Дата заезда:</label>
+                <input class="date-in"type="text" id="date-in" name="date-in" placeholder="24 апреля 2017">
+                <button class="calendar calendar-first" type="button" title="Календарь">Календарь</button>
+              </div>
+              <div class="search-row search-second-row">
+                <label for="date-out">Дата выезда:</label>
+                <input class="date-out" type="text" id="date-out" name="date-out" placeholder="4 июля 2017">
+                <button class="calendar calendar-second" type="button" title="Календарь">Календарь</button>
+              </div>
+              <div class="search-row search-third-row">
+                <label for="adults">Взрослые:</label>
+                <button class="minus-button" type="button" title="Минус">-</button>
+                <input class="adults" type="text" id="adults" name="adults" placeholder="2">
+                <button class="plus-button" type="button" title="Плюс">+</button>
+              </div>
+              <div class="search-row search-fourth-row">
+                <label for="children">Дети:</label>
+                <button class="minus-button" type="button" title="Минус">-</button>
+                <input class="children" type="text" id="children" name="children" placeholder="0">
+                <button class="plus-button" type="button" title="Плюс">+</button>
+              </div>
+              <div class="search-form-button">
+                <input type="submit" value="Найти">
+              </div>
+            </div>
+          </form>
+        </div>
+      </main>
+      <footer class="container">
+        <div class="footer-main footer-opacity clearfix">
+          <section class="hashtag">
+            <span>#Visitsedona</span>
+          </section>
+          <section class="footer-social">
+            <a class="social-btn social-btn-twitter" href="#">Twitter</a>
+            <a class="social-btn social-btn-facebook" href="#">Facebook</a>
+            <a class="social-btn social-btn-youtube" href="#">Youtube</a>
+          </section>
+          <section class="footer-copyright">
+            <span class="html-academy">Website by</span>
+            <a class="copyright-img link-img" href="https://htmlacademy.ru/intensive/htmlcss">
+            </a>
+          </section>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
