--- a/catalog.html
+++ b/catalog.html
@@ -36,7 +36,7 @@
           <form class="search-form-small clearfix" action="#" method="post">
             <div class="search-form-small-basis search-form-small-left">
               <h2 class="minor-header-form">Инфраструктура:</h2>
-              <input type="checkbox" name="pool" id="pool">
+              <input type="checkbox" disabled name="pool" id="pool">
               <label for="pool">Бассейн</label>
               <input type="checkbox" name="parking" id="parking">
               <label for="parking">Парковка</label>
