--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </section>
         <div class="picture-reason-reverse">
           <div class="picture-description-reverse">
-           <h2 class="picture-header-reverse">Там есть мост дьявола</h2>
+           <h2 class="picture-header-reverse">Там есть<br> мост дьявола</h2>
            <div class="picture-number-reverse">&mdash;№2&mdash;</div>
            <p class="picture-text-reverse">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
