--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Седона</title>
-    <link href="css/style.css" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
   <body>
@@ -27,7 +27,7 @@
             </ul>
           </nav>
           <a class="index-logo" href="#">
-            <img src="img/logo.png" alt="Седона">
+            <img src="img/logo.png" alt="Седона" width="138" height="70">
           </a>
         </div>
       </header>
@@ -45,22 +45,22 @@
             <p class="picture-text">Седона &mdash; не аттракцион для туристов, там течет своя жизнь</p>
           </div>
           <div class="picture">
-            <img src ="img/usaflag.jpg" alt="Город">
+            <img src ="img/usaflag.jpg" alt="Город" width="800" height="256">
           </div>
         </div>
         <section class="reason-list">
           <div class="reason-point">
-            <img src ="img/house.png" alt="Жилье">
+            <img src ="img/house.png" alt="Жилье" width="75" height="72">
             <h2 class="reason-header">Жилье</h2>
             <span>Рекомендуем пожить в настоящем мотеле, все как в кино!</span>
           </div>
           <div class="reason-point">
-            <img src ="img/food.png" alt="Еда">
+            <img src ="img/food.png" alt="Еда" width="74" height="70">
             <h2 class="reason-header">Еда</h2>
             <span>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</span>
           </div>
           <div class="reason-point">
-            <img src ="img/present.png" alt="Сувениры">
+            <img src ="img/present.png" alt="Сувениры" width="64" height="76">
             <h2 class="reason-header">Сувениры</h2>
             <span>Не только китайского, но и местного производства!</span>
           </div>
@@ -72,7 +72,7 @@
            <p class="picture-text-reverse">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
           <div class="picture">
-            <img src ="img/mountains.jpg" alt="Горы">
+            <img src ="img/mountains.jpg" alt="Горы" width="800" height="256">
           </div>
         </div>
         <section class="reason-list-nopicture">
@@ -98,7 +98,7 @@
             <p class="main-answer">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           </div>
           <div class="search-open">
-            <h3 class="search-name">Поиск гостиницы в Седоне</h3>
+            <button class="search-name">Поиск гостиницы в Седоне</button>
           </div>
         </section>
         <div class="search-block map">
@@ -145,7 +145,7 @@
           </section>
           <section class="footer-copyright">
             <span class="html-academy">Website by</span>
-            <a class="copyright-img link-img" href="https://htmlacademy.ru/intensive/htmlcss">
+            <a class="copyright-img link-img" href="https://htmlacademy.ru/intensive/htmlcss">html academy
             </a>
           </section>
         </div>
