--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Седона</title>
-    <link href="css/style.css" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
   <body>
@@ -27,7 +27,7 @@
             </ul>
           </nav>
           <a class="index-logo" href="index.html">
-            <img src="img/logo.png" alt="Седона">
+            <img src="img/logo.png" alt="Седона" width="138" height="70">
           </a>
         </div>
       </header>
@@ -96,7 +96,7 @@
           <article class="hotel-type clearfix">
             <div class="left-article-type clearfix">
               <div class="hotel-image">
-                <img class="article-img" src="img/hotel3.jpg" alt="Фото">
+                <img class="article-img" src="img/hotel3.jpg" alt="Фото" width="135" height="90">
               </div>
               <div class="hotel-description">
                 <a class= "hotel-name" href="#">Amara resort & spa</a>
@@ -125,7 +125,7 @@
           <article class="hotel-type clearfix">
             <div class="left-article-type clearfix">
               <div class ="hotel-image">
-                <img class="article-img" src="img/hotel2.jpg" alt="Фото">
+                <img class="article-img" src="img/hotel2.jpg" alt="Фото" width="135" height="90">
               </div>
               <div class="hotel-description">
                 <a class= "hotel-name" href="#">Desert quail inn</a>
@@ -153,7 +153,7 @@
           <article class="hotel-type clearfix">
             <div class="left-article-type clearfix">
               <div class="hotel-image">
-                <img class="article-img" src="img/hotel1.jpg" alt="Фото">
+                <img class="article-img" src="img/hotel1.jpg" alt="Фото" width="135" height="90">
               </div>
               <div class="hotel-description">
                 <a class= "hotel-name" href="#">Villas at poco diablo</a>
