--- a/index.html
+++ b/index.html
@@ -151,5 +151,15 @@
         </div>
       </footer>
     </div>
+    <script>
+    var link = document.querySelector(".search-name");
+    var popup = document.querySelector(".search-basis");
+
+    link.addEventListener("click", function(evt){
+      evt.preventDefault();
+      popup.classList.add("model-content-show");
+    });
+    </script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
